@@ -10,7 +10,6 @@ import org.hl7.fhir.dstu3.model.Bundle;
 import org.hl7.fhir.dstu3.model.Organization;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class OrganizationList extends AbstractAttributionCommand {
 
@@ -27,7 +26,7 @@ public class OrganizationList extends AbstractAttributionCommand {
     public void run(Bootstrap<?> bootstrap, Namespace namespace) {
         System.out.println("Listing");
         final String attributionService = namespace.getString(ATTR_HOSTNAME);
-        System.out.println(String.format("Connecting to Attribution service at: %s", attributionService));
+        System.out.printf("Connecting to Attribution service at: %s%n", attributionService);
 
         final IGenericClient client = ctx.newRestfulGenericClient(attributionService);
 
@@ -41,17 +40,16 @@ public class OrganizationList extends AbstractAttributionCommand {
         // Generate the table
         final String[] headers = {"ID", "NPI", "NAME"};
 
-        //noinspection FuseStreamOperations Fusing the operation here actually causes an issue with the print output
         final List<String[]> collect = organizations
                 .getEntry()
                 .stream()
                 .filter(Bundle.BundleEntryComponent::hasResource)
                 .map(Bundle.BundleEntryComponent::getResource)
-                .map(resource -> (Organization) resource)
+                .map(Organization.class::cast)
                 .map(resource ->
                         List.of(resource.getId(), resource.getIdentifierFirstRep().getValue(), resource.getName()))
                 .map(values -> values.toArray(new String[0]))
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println(FlipTable.of(headers, collect.toArray(new String[0][])));
     }
