@@ -9,7 +9,6 @@ import org.hl7.fhir.dstu3.model.Resource;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class BundleParser {
 
@@ -31,6 +30,6 @@ public class BundleParser {
                     resource.setMeta(meta);
                 })
                 .map(converter::convert)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
